# elevation-tiler

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
elevation_tiler/: __init__.py  cog_layer.py
tests/: generate_cog_subset.py  test_elevation_tiler.py
tests/fixtures/: dem-14-8924-9338-buffered.tif
