[tool.poetry]
name = "elevation-tiler"
version = "0.1.0"
description = ""
authors = ["Daven Quinn <code@davenquinn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
httpx = "^0.27.0"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
elevation-tiler = "elevation_tiler:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
