[project]
name = "elevation-tiler"
version = "0.1.0"
description = ""
authors = [{ name = "Daven Quinn", email = "code@davenquinn.com" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.111.0,<0.112",
    "httpx>=0.27.0,<0.28",
    "uvicorn>=0.29.0,<0.30",
    "python-dotenv>=1.0.1,<2",
    "rio-rgbify>=0.4.0,<0.5",
    "morecantile>=5.3.0,<6",
    "rio-tiler>=6.6.1,<7",
    "pytest>=8.2.1,<9",
    "rio-cogeo>=5.3.0,<6",
    "pillow>=10.3.0,<11",
    "rasterio>=1.4.3,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
